// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`server capability snapshots > hackerspub > adapter 1`] = `"hackerspub"`;

exports[`server capability snapshots > hackerspub > capabilities 1`] = `
{
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "auth.oauth.authorizationCode": "unsupported:probe:HackersPub does not use OAuth.",
  "instance.nodeInfo": "supported:static",
  "posts.read": "supported:static",
}
`;

exports[`server capability snapshots > hollo > adapter 1`] = `"hollo"`;

exports[`server capability snapshots > hollo > capabilities 1`] = `
{
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "auth.oauth.authorizationCode": "supported:oauth",
  "auth.oauth.refreshToken": "unsupported:static:This adapter does not assume refresh-token support.",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "posts.read": "supported:static",
}
`;

exports[`server capability snapshots > mastodon > adapter 1`] = `"mastodon"`;

exports[`server capability snapshots > mastodon > capabilities 1`] = `
{
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "auth.oauth.authorizationCode": "supported:oauth",
  "auth.oauth.refreshToken": "unsupported:static:This adapter does not assume refresh-token support.",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "posts.read": "supported:static",
  "streaming.timeline": "supported:instance",
}
`;

exports[`server capability snapshots > misskey > adapter 1`] = `"misskey"`;

exports[`server capability snapshots > misskey > capabilities 1`] = `
{
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "auth.oauth.authorizationCode": "supported:oauth",
  "auth.oauth.refreshToken": "unsupported:static:Misskey OAuth access tokens do not use refresh tokens.",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "posts.read": "supported:static",
  "social.reaction": "supported:probe",
}
`;

exports[`server capability snapshots > pleroma > adapter 1`] = `"pleroma"`;

exports[`server capability snapshots > pleroma > capabilities 1`] = `
{
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "auth.oauth.authorizationCode": "supported:static",
  "auth.oauth.refreshToken": "supported:static",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "posts.quote": "supported:probe",
  "posts.read": "supported:static",
  "social.reaction": "supported:probe",
}
`;
